# sudo-request

./: AGENTS.md  CHANGELOG.md  README.md  Taskfile.yml  audit-memo.md  pyproject.toml  refactoring-structure.todo  tasks.todo
docs/: README.md  architecture.md  development.md  operations.md  release.md
docs/plans/: daemon-state-persistence.md
scripts/: bump-version.py  check-version.py  e2e-root-manual.sh  e2e-smoke.sh  release-check.sh
skills/sudo-request-run/: SKILL.md
src/sudo_request/: __main__.py  cleanup.py  cli.py  config.py  daemon.py  install.py  ipc.py  sudoers.py  telegram.py
src/sudo_request/app/: cleanup.py  install.py
src/sudo_request/app/cli/: __init__.py  cleanup.py  doctor.py  init_config.py  install.py  install_commands.py  ipc_commands.py  main.py  output.py  run.py  status.py
src/sudo_request/app/daemon/: __init__.py  lifecycle.py  peer.py  server.py  state.py  sudo_window.py  watchdog.py
src/sudo_request/approval/: message.py  telegram.py
src/sudo_request/lib/: __init__.py  audit.py  constants.py
src/sudo_request/security/: sudoers.py
tasks/: Release.yml
tests/: helpers.py  test_app_cleanup.py  test_app_doctor.py  test_app_init_config.py  test_app_install.py  test_app_ipc_commands.py  test_app_status.py  test_approval_decision.py  test_approval_telegram.py  test_cleanup.py  test_cli.py  test_config.py  test_daemon_peer.py  test_daemon_state.py  test_daemon_sudo_window.py  test_daemon_watchdog.py  test_install.py  test_payload.py  test_security_payload.py  test_security_sudoers.py  test_sudoers.py  test_telegram.py
(+4 files in other folders)
